# OpenSO-101

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  constraints.txt  environment.yml  pyproject.toml  requirements-cuda.txt  setup.py
.github/workflows/: test.yml
docs/: development_diary.md  isaac_sim_learning_guide.md
docs/concepts/: data_generation.md  imitation_learning.md  rl_algorithms.md  sim2real.md  tasks_and_envs.md
docs/guides/: add_a_task.md  install.md  migration_from_safe_sim2real.md  quickstart.md  teleop.md
examples/: README.md  register_custom_task.py
media/: README.md
scripts/: fetch_so101_usd.sh  install.sh  quest_setup.sh  quest_train_il.slurm
src/openso101/: __init__.py  shaping.py
src/openso101/cli/: data.py  envs.py  il.py  main.py  rl.py  sim2real.py
src/openso101/data_gen/adapters/: hdf5_to_lerobot.py
src/openso101/data_gen/isaaclab_mimic/: generator.py
src/openso101/data_gen/mimicgen/: generator.py
src/openso101/envs/: __init__.py  base.py  registry.py
src/openso101/il/: __init__.py
src/openso101/il/datasets/: __init__.py  lerobot_adapter.py
src/openso101/il/policies/: __init__.py  act.py  diffusion.py  factory.py
src/openso101/il/runners/: __init__.py  trainer.py
src/openso101/rl/: __init__.py  cli_args.py
src/openso101/rl/algos/: __init__.py  ppo.py  sac.py
src/openso101/rl/algos/_common/: replay_buffer.py
src/openso101/rl/runners/: __init__.py  off_policy_runner.py  on_policy_runner.py
src/openso101/robots/: __init__.py
src/openso101/robots/so101/: __init__.py  _usd_bounds.py  cameras.py  constants.py  so_arm101.py
src/openso101/sim2real/: deploy.py
src/openso101/sim2real/domain_randomization/: __init__.py  action.py  observation.py  physics.py  visual.py
src/openso101/sim2real/noise/: __init__.py
src/openso101/sim2real/transfer/: __init__.py
src/openso101/tasks/: __init__.py
src/openso101/tasks/lift/: __init__.py  lift_env_cfg.py
src/openso101/tasks/lift/agents/: rsl_rl_distillation_cfg.py  rsl_rl_ppo_cfg.py
src/openso101/tasks/lift/mdp/: __init__.py  cube_above_pose_command.py  observations.py  rewards.py  terminations.py
src/openso101/tasks/pick_place/: __init__.py  pick_place_env_cfg.py
src/openso101/tasks/pick_place/agents/: rsl_rl_distillation_cfg.py  rsl_rl_ppo_cfg.py
src/openso101/tasks/pick_place/mdp/: __init__.py  curriculum_goal_command.py  grasp.py  rewards.py  terminations.py
src/openso101/tasks/shared/: __init__.py  events.py  grasp.py  objects.py  observations.py  rewards.py  rl_defaults.py  rsl_rl_distillation_cfg.py  terminations.py
src/openso101/tasks/stack/: __init__.py  stack_env_cfg.py
src/openso101/tasks/stack/agents/: rsl_rl_distillation_cfg.py  rsl_rl_ppo_cfg.py
src/openso101/tasks/stack/mdp/: __init__.py  observations.py  rewards.py  terminations.py
src/openso101/teleop/: __init__.py  camera_viewports.py  hdf5_recorder.py  lerobot_interface.py  lerobot_recorder.py  so101_mapping.py
tests/: conftest.py  test_camera_viewports.py  test_cli_envs.py  test_cli_il_data_sim2real.py  test_cli_rl.py  test_env_base_configure.py  test_hdf5_teleop_recorder.py  test_il_public_api.py  test_lerobot_push_dataset.py  test_lerobot_recorder.py  test_lerobot_so101_interface.py  test_lerobot_so101_mapping.py  test_pick_place_pick_lift_runtime.py  test_register_task.py  test_replay_teleop_checkpoint.py  test_shaping_rewards.py  test_so101_config_consistency.py  test_so101_object_physics.py  test_so101_teleop_scene_cfg.py  test_teleop_agent_keyboard.py  test_teleop_success.py  test_visual_dr.py
