[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openso-101"
version = "0.1.0"
description = "State-of-the-art open-source robot learning framework for the LeRobot SO-101 in Isaac Lab"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "==3.11.*"
authors = [{ name = "Jixin Yan" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
openso101 = "openso101.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
